# requester

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/filesys/: config.rs  history.rs  mod.rs
src-tauri/src/request/: http.rs  mod.rs  netio.rs
src-tauri/src/utils/: log.rs  mod.rs
src/assets/: github.css  style.css
src/components/: AsyncHighlight.vue  BodyBuilder.vue  CollapsableBar.vue  DropdownButton.vue  HexViewer.vue  HttpBody.vue  HttpHeadersView.vue  HttpRequestInfo.vue  HttpResponse.vue  JsonHighlight.vue  JsonNode.vue
src/components/icons/: Logo.vue  OpenArrowIcon.vue  ReloadIcon.vue  ReqMngIcon.vue  ReqTypeIcon.vue  UpIcon.vue
src/components/nav/: NavHolder.vue
src/pages/: HttpRequests.vue  NetIO_Requests.vue  NotLoaded.vue  SettingsPage.vue  landing.vue
src/router/: index.js
src/utils/: changelog.js  http.js  simple.js
