[package]
name = "oxy-requester"
version = "1.1.4"
description = "Create requests"
authors = ["oxydien"]
license = "BSD 3-Clause"
repository = "https://github.com/oxydien/requester"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "os-all", "app-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.9"
reqwest = "0.11.18"
bytes = "1.4.0"
tokio = {version = "1.31.0", features= ["full"] }
colored = "2.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
