[package]
name = "oxy-requester"
version = "1.1.4"
description = "Create requests"
authors = ["oxydien"]
license = "BSD 3-Clause"
repository = "https://github.com/oxydien/requester"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
tokio = {version = "1.31.0", features= ["full"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
